<resources>
    <string name="app_name">Memorista</string>
    <string name="content_description">Image</string>

    <string name="categories_failed_message">Failed to load categories</string>

    <string name="task_status_tab_all">All</string>
    <string name="task_status_tab_completed">Completed</string>
    <string name="task_status_tab_active">Active</string>

    <string-array name="task_status_tab_titles">
        <item>All</item>
        <item>Completed</item>
        <item>Active</item>
    </string-array>

    <string name="new_task_title">New Task</string>
    <string name="new_task_title_notes">Notes</string>
    <string name="new_task_title_date">Date</string>
    <string name="new_task_title_time">Time</string>
    <string name="new_task_title_category">Category</string>
    <string name="new_task_title_alarm">Alarm</string>
    <string name="new_task_no_selected_date">No selected date</string>

    <string name="button_new">Create</string>

    <string name="create_category_title">New Category</string>
    <string name="create_category_hint">Category name</string>
    <string name="button_create">Create</string>

    <string name="intro_description">Plan your DAY manage your TIME with our manager</string>
    <string name="intro_welcome">Welcome to</string>
    <string name="intro_label_name">Please enter your name to continue</string>
    <string name="intro_hint_name">Robert Martin</string>
    <string name="intro_terms_and_conditions">Continuing, you are agree with our Terms and Conditions</string>
    <string name="intro_continue_button">Continue</string>

    <string name="home_tasks_title">Today\'s tasks</string>
    <string name="home_sort_button">Sort by</string>

    <string name="tasks_list_item_tasks_count_title">Tasks</string>
    <string name="hint_create_new_task">What do you want to do?</string>

    <string name="button_new_task">Task</string>
    <string name="button_new_list">List</string>

    <string name="task_list_delete_dialog_message">Are you sure?</string>
    <string name="task_list_delete_dialog_positive_button_title">Yes</string>
    <string name="task_list_delete_dialog_negative_button_title">No</string>
    
    <string name="dialog_sort_default">Default</string>
    <string name="dialog_sort_by_date">By date</string>
    <string name="dialog_sort_by_date_and_name">By date and name</string>
    <string name="dialog_sort_by_name">By name</string>
    <string name="dialog_sort_by_name_and_priority">By name and priority</string>
    <string name="dialog_sort_by_priority">By priority</string>
    <string name="dialog_sort_by_priority_and_date">By priority and date</string>

    <string name="date_today">Today</string>
    <string name="date_tomorrow">Tomorrow</string>
    <string name="date_yesterday">Yesterday</string>

    <string name="priority_low">❗ Low</string>
    <string name="priority_medium">❗❗ Medium</string>
    <string name="priority_high">❗❗❗ High</string>
    <string name="priority_extra">❗❗❗❗ Extra</string>

    <string name="priority_symbol_low">❗</string>
    <string name="priority_symbol_medium">❗❗</string>
    <string name="priority_symbol_high">❗❗❗</string>
    <string name="priority_symbol_extra">❗❗❗❗</string>
    <string name="title_search">Search</string>

    <string name="nav_title_today_tasks">Today</string>
    <string name="nav_title_upcoming_tasks">Upcoming</string>
    <string name="nav_title_this_week_tasks">This week</string>
    <string name="nav_title_all_tasks">All</string>
    <string name="nav_title_calendar">Calendar</string>
    <string name="nav_title_favorites">Favorites</string>
    <string name="nav_title_notifications">Notifications</string>
    <string name="nav_title_categories">Categories</string>

    <string name="tasks_list_completed_tasks_title">Completed</string>

    <string name="task_car_popup_menu_title_favorite">Add to Favorites</string>
    <string name="task_car_popup_menu_title_priority">Priority</string>
    <string name="task_car_popup_menu_title_category">Change category</string>
    <string name="task_car_popup_menu_title_">Edit</string>
    <string name="task_car_popup_menu_title_delete">Delete</string>

    <string name="dialog_message_delete_task">Are you sure you want to delete the task?</string>
    <string name="dialog_button_negative">No</string>
    <string name="dialog_button_positive">Yes</string>

</resources>