<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/graph_main"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.app.memorista.ui.fragments.TodayTasksFragment"
        android:label="@string/nav_title_today_tasks" />
    <fragment
        android:id="@+id/introFragment"
        android:name="com.app.memorista.ui.fragments.IntroFragment"
        android:label="fragment_intro"
        tools:layout="@layout/fragment_intro" />
    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.app.memorista.ui.fragments.CalendarFragment"
        android:label="@string/nav_title_calendar"
        tools:layout="@layout/fragment_calendar" />
    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.app.memorista.ui.fragments.NotificationsFragment"
        android:label="@string/nav_title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/favoritesTasksFragment"
        android:name="com.app.memorista.ui.fragments.FavoriteTasksFragment"
        android:label="@string/nav_title_favorites"
        tools:layout="@layout/fragment_saved_tasks" />
    <fragment
        android:id="@+id/allTasksFragment"
        android:name="com.app.memorista.ui.fragments.AllTasksFragment"
        android:label="@string/nav_title_all_tasks" />
    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.app.memorista.ui.fragments.CategoriesFragment"
        android:label="@string/nav_title_categories" />
    <fragment
        android:id="@+id/thisWeekTasksFragment"
        android:name="com.app.memorista.ui.fragments.ThisWeekTasksFragment"
        android:label="@string/nav_title_this_week_tasks" />
    <fragment
        android:id="@+id/upcomingTasksFragment"
        android:name="com.app.memorista.ui.fragments.UpcomingTasksFragment"
        android:label="@string/nav_title_upcoming_tasks" />
</navigation>